fix(wip): change max-height to vh and add overflow

--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -193,7 +193,8 @@ code, pre, .highlight table, .highlight tr, .highlight td {
       }
 
       .table-wrapper {
-        max-height: $MAX_LENGTH;
+        max-height: 60vh;
+        overflow-y: auto;
         @include details-transition-close;
       }
 
